2005-07-15  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS.

2005-07-13  Marco Barisione  <marco.bari@vene.ws>

	* gtksourceview/gtksourceprintjob.c (print_page): init
	unitialized variable.

2005-06-23  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/sql.lang: use \ as escape char.
	Fixes bug #305958. 

2005-06-23  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/fortran.lang: added STOP keyword, 
	improved comments management. Based on a patch by 
	John Spray <jcs116@york.ac.uk>. Partially fixes bug #168090

2005-06-21  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourcelanguage.c (tag_style_changed_cb): free
	the value returned by gtk_source_tag_get_id. Fixes bug #306147.

2005-06-21  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/ruby.lang: added application/x-ruby
	to the list of mime-types. Fixes bug #307365.

2005-06-21  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourcebuffer.c (iter_has_syntax_tag): fixed
	memory leak (#300796). 
	Based on a patch by Yevgen Muntyan <muntyan@tamu.edu>.

2005-04-01  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added "xh" to ALL_LINGUAS.

2005-03-31  Steve Murphy  <murf@e-tools.com>

	* configure.in: Added "rw" to ALL_LINGUAS.

2005-03-10  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne "Nepali" in ALL_LINGUAS

=== gtksourceview 1.2.0 ===

2005-03-08  Paolo Maggi  <paolo@gnome.org>

	* NEWS:
	* README:
	* configure.in: 1.2.0 release

=== gtksourceview 1.1.93 ===

2005-03-01  Paolo Maggi  <paolo@gnome.org>
	
	* configure.in:
	* README:
	* NEWS: 1.1.93 release

2005-03-01  Paolo Maggi  <paolo@gnome.org>

	Patches by Paolo Borelli <pbor@katamail.com>

	* gtksourceview/gtksourceiter.c (pointer_from_offset_skipping_decomp);
	"offset" passed to pointer_from_offset_skipping_decomp is the number of chars 
	before the match in the string after both casefold and normalize. 